View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033056 | Open CASCADE | OCCT:Visualization | public | 2022-07-06 23:58 | 2022-07-10 12:09 |
Reporter | kgv | Assigned To | kgv | ||
Priority | normal | Severity | feature | ||
Status | verified | Resolution | fixed | ||
Target Version | 7.7.0 | ||||
Summary | 0033056: Visualization - add front face culling option | ||||
Description | Normally back face culling is the only natural feature to apply, but in some diagnostics / special visual affects cases it could be useful to allow front face culling as well. As OpenGL provides both options - adding Graphic3d_TypeOfBackfacingModel_FrontCulled should be straightforward. | ||||
Steps To Reproduce | pload MODELING VISUALIZATION box b 1 2 3 vinit View1 vdisplay -dispMode 1 b vfit vaspects b -faceCulling front | ||||
Tags | No tags attached. | ||||
Test case number | opengl general cullface | ||||
|
Branch CR33056 has been created by kgv. SHA-1: 92bf5bbeccab0430302c93e6073bde90cc1f2901 Detailed log of new commits: Author: kgv Date: Wed Jul 6 23:39:14 2022 +0300 0033056: Visualization - add front face culling option Added Graphic3d_TypeOfBackfacingModel_FrontCulled enumeration value. OpenGl_Context::SetFaceCulling() now supports GL_FRONT in addition to GL_BACK. Added -faceCulling option to vaspects Draw command. |
|
Branch CR33056 has been updated forcibly by kgv. SHA-1: 7279d81ccd66b3bb4d6a1791f9ea8dda305f9560 |
|
Patch is ready for review - OCCT: branch CR33056. http://jenkins-test-occt.nnov.opencascade.com/view/CR33056-master-KGV/ |
|
The patch was reviewed |
|
Combination - OCCT branch : IR-2022-07-08 master SHA - changes and them, and you can discard any commits you make in this 33c8a72788661285860902f261062e39f32a2d46 changes and them, and you can discard any commits you make in this e0ceb716c70188b98130b1550914140d0502a6f9 Products branch : IR-2022-07-08 SHA - 79a687f1cd4081ec53ec08c201360e89fce62abc was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18685.930000000586 / 18908.870000000694 [-1.18%] Products Total CPU difference: 11796.890000000125 / 11832.130000000114 [-0.30%] Windows-64-VC14: OCCT Total CPU difference: 20784.828125 / 20752.59375 [+0.16%] Products Total CPU difference: 13361.3125 / 13368.90625 [-0.06%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33056 has been deleted by mnt. SHA-1: 7279d81ccd66b3bb4d6a1791f9ea8dda305f9560 |
occt: master 9db675b3 2022-07-06 23:39:14 Committer: smoskvin Details Diff |
0033056: Visualization - add front face culling option Added Graphic3d_TypeOfBackfacingModel_FrontCulled enumeration value. OpenGl_Context::SetFaceCulling() now supports GL_FRONT in addition to GL_BACK. Added -faceCulling option to vaspects Draw command. |
Affected Issues 0033056 |
|
mod - src/BinMXCAFDoc/BinMXCAFDoc_VisMaterialDriver.cxx | Diff File | ||
mod - src/Graphic3d/Graphic3d_TypeOfBackfacingModel.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_Context.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Context.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_PrimitiveArray.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Workspace.cxx | Diff File | ||
mod - src/RWGltf/RWGltf_GltfMaterialMap.cxx | Diff File | ||
mod - src/ViewerTest/ViewerTest.cxx | Diff File | ||
mod - src/XDEDRAW/XDEDRAW_Colors.cxx | Diff File | ||
mod - src/XmlMXCAFDoc/XmlMXCAFDoc_VisMaterialDriver.cxx | Diff File | ||
add - tests/opengl/data/general/cullface | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-07-06 23:58 | kgv | New Issue | |
2022-07-06 23:58 | kgv | Assigned To | => kgv |
2022-07-06 23:59 | git | Note Added: 0109635 | |
2022-07-07 00:02 | kgv | Relationship added | related to 0032188 |
2022-07-07 00:36 | git | Note Added: 0109637 | |
2022-07-07 09:22 | kgv | Assigned To | kgv => osa |
2022-07-07 09:22 | kgv | Status | new => resolved |
2022-07-07 09:22 | kgv | Test case number | => opengl general cullface |
2022-07-07 09:22 | kgv | Note Added: 0109646 | |
2022-07-07 16:19 | osa | Assigned To | osa => bugmaster |
2022-07-07 16:19 | osa | Status | resolved => reviewed |
2022-07-07 16:19 | osa | Note Added: 0109669 | |
2022-07-10 11:22 | smoskvin | Status | reviewed => tested |
2022-07-10 11:22 | smoskvin | Note Added: 0109713 | |
2022-07-10 12:03 | smoskvin | Changeset attached | => occt master 9db675b3 |
2022-07-10 12:03 | kgv | Assigned To | bugmaster => kgv |
2022-07-10 12:03 | kgv | Status | tested => verified |
2022-07-10 12:03 | kgv | Resolution | open => fixed |
2022-07-10 12:09 | git | Note Added: 0109743 |