src/Graphic3d/Graphic3d_TypeOfBackfacingModel.hxx
@@ -23,7 +23,8 @@ enum Graphic3d_TypeOfBackfacingModel
   Graphic3d_TypeOfBackfacingModel_Auto,        //!< automatic back face culling enabled for opaque groups with closed flag
                                                //!  (e.g. solids, see Graphic3d_Group::IsClosed())
   Graphic3d_TypeOfBackfacingModel_DoubleSided, //!< no culling (double-sided shading)
-  Graphic3d_TypeOfBackfacingModel_BackCulled,  //!< back face culling
+  Graphic3d_TypeOfBackfacingModel_BackCulled,  //!< back  face culling
+  Graphic3d_TypeOfBackfacingModel_FrontCulled, //!< front face culling
   // old aliases
   Graphic3d_TOBM_AUTOMATIC  = Graphic3d_TypeOfBackfacingModel_Auto,
   Graphic3d_TOBM_FORCE      = Graphic3d_TypeOfBackfacingModel_DoubleSided,
